--- a/language/en-GB/en-GB.plg_xmap_com_jevents.ini
+++ b/language/en-GB/en-GB.plg_xmap_com_jevents.ini
@@ -1,29 +1,31 @@
-XMAP_SETTING_INCLUDE_EVENTS_LABEL = "Include Events"
-XMAP_SETTING_INCLUDE_EVENTS_DESC = "Select when should events be included in the sitemap"
+PLG_XMAP_COM_JEVENTS = "Xmap - JEvents Integration"
+PLG_XMAP_COM_JEVENTS_DESC = "Add support for categories"
 
-XMAP_SETTING_SHOW_UNAUTH_LINKS_LABEL = "Show unauthorized Events"
-XMAP_SETTING_SHOW_UNAUTH_LINKS_DESC = "If yes, will show links to events to registered events even if you are not logged in.  The user will need to login to see the item in full."
+PLG_XMAP_COM_JEVENTS_INCLUDE_EVENTS_LABEL = "Include Events"
+PLG_XMAP_COM_JEVENTS_INCLUDE_EVENTS_DESC = "Select when should events be included in the sitemap"
 
-XMAP_SETTING_CATEGORY_PRIORITY_LABEL = "Category Priority"
-XMAP_SETTING_CATEGORY_PRIORITY_DESC = "Set the priority for the categories"
+PLG_XMAP_COM_JEVENTS_SHOW_UNAUTH_LINKS_LABEL = "Show unauthorized Events"
+PLG_XMAP_COM_JEVENTS_SHOW_UNAUTH_LINKS_DESC = "If yes, will show links to events to registered events even if you are not logged in.  The user will need to login to see the item in full."
 
-XMAP_SETTING_CATEGORY_CHANGE_FREQ_LABEL = "Category Change frequency"
-XMAP_SETTING_CATEGORY_CHANGE_FREQ_DESC = "Set the chage frequency for the categories"
+PLG_XMAP_COM_JEVENTS_CATEGORY_PRIORITY_LABEL = "Category Priority"
+PLG_XMAP_COM_JEVENTS_CATEGORY_PRIORITY_DESC = "Set the priority for the categories"
 
-XMAP_SETTING_EVENT_PRIORITY_LABEL = "Event Priority"
-XMAP_SETTING_EVENT_PRIORITY_DESC = "Set the priority for events"
+PLG_XMAP_COM_JEVENTS_CATEGORY_CHANGE_FREQ_LABEL = "Category Change frequency"
+PLG_XMAP_COM_JEVENTS_CATEGORY_CHANGE_FREQ_DESC = "Set the chage frequency for the categories"
 
-XMAP_SETTING_EVENT_CHANGE_FREQ_LABEL = "Events Change frequency"
-XMAP_SETTING_EVENT_CHANGE_FREQ_DESC = "Set the chage frequency for events"
+PLG_XMAP_COM_JEVENTS_EVENT_PRIORITY_LABEL = "Event Priority"
+PLG_XMAP_COM_JEVENTS_EVENT_PRIORITY_DESC = "Set the priority for events"
 
-; Generic Extension settings strings
-XMAP_OPTION_USE_PARENT_MENU = "Use Parent Menu Settings"
-XMAP_OPTION_NEVER = "Never"
-XMAP_OPTION_ALWAYS = "Always"
-XMAP_OPTION_XML_ONLY = "In XML Sitemap Only"
-XMAP_OPTION_HTML_ONLY = "In HTML Sitemap Only"
-XMAP_OPTION_WEEKLY = "Weekly"
-XMAP_OPTION_DAILY = "Daily"
-XMAP_OPTION_MONTHLY = "Monthly"
-XMAP_OPTION_YEARLY = "Yearly"
-XMAP_OPTION_HOURLY = "Hourly"
+PLG_XMAP_COM_JEVENTS_EVENT_CHANGE_FREQ_LABEL = "Events Change frequency"
+PLG_XMAP_COM_JEVENTS_EVENT_CHANGE_FREQ_DESC = "Set the chage frequency for events"
+
+PLG_XMAP_COM_JEVENTS_USE_PARENT_MENU = "Use Parent Menu Settings"
+PLG_XMAP_COM_JEVENTS_NEVER = "Never"
+PLG_XMAP_COM_JEVENTS_ALWAYS = "Always"
+PLG_XMAP_COM_JEVENTS_XML_ONLY = "In XML Sitemap Only"
+PLG_XMAP_COM_JEVENTS_HTML_ONLY = "In HTML Sitemap Only"
+PLG_XMAP_COM_JEVENTS_WEEKLY = "Weekly"
+PLG_XMAP_COM_JEVENTS_DAILY = "Daily"
+PLG_XMAP_COM_JEVENTS_MONTHLY = "Monthly"
+PLG_XMAP_COM_JEVENTS_YEARLY = "Yearly"
+PLG_XMAP_COM_JEVENTS_HOURLY = "Hourly"
